# ece1508

./: README.md
project/: CMakeLists.txt  go_n1024  go_n2500  n1024_3-6_regular.txt  n2500_3-6_regular.txt  plot.py  spa.cc  window.cc  window2.cc
project/results/m1024/: base.data  pd_l64.data  wd_w1_l64.data  wd_w2_l64.data
project/results/m2500/: wd_w1_l64.data  wd_w2_l64.data  wd_w4_l64.data  wd_w8_l64.data
project/results/term_length/: base_code.data
ps1/: README  bsc_spa.data  exhaustive.py  plotResults.py  spa.py
ps2/: Makefile  ParityCheckMatrix1200.txt  README  hamming743.txt  parity_gen.py  plot_a.data  plot_c.data  spa  spa.cc
ps2/codes/: c01.data  c01.txt  c02.data  c02.txt  c03.data  c03.txt  c04.data  c04.txt  c05.data  c05.txt  c06.data  c06.txt  c07.data  c07.txt  c08.data  c08.txt  c09.data  c09.txt  c10.data  c10.txt
ps3/: README  average_data.py  gen_rx  opt.py  parity_gen.py  plotResults.py  run_spa  spa  spa.cc
ps3/codes/: r5.txt  r6.txt  r7.txt
ps3/codes/r5/: c10_r5.txt  c1_r5.txt  c2_r5.txt  c3_r5.txt  c4_r5.txt  c5_r5.txt  c6_r5.txt  c7_r5.txt  c8_r5.txt  c9_r5.txt
ps3/codes/r6/: c10_r6.txt  c1_r6.txt  (+8 more)
ps3/results/: avg_reg.data  c1_reg.data  c2_reg.data  c3_reg.data  r5_avg.data  r6_avg.data  r7_avg.data
ps4/: README  ldpc.txt  lp.py  lt.py  plotResults.py  plot_lp.py  plot_lt.py  raptor.py  raptor_plot.py  spa  spa.cc
ps4/results/: bp_awgn.data  bp_bec.data  bp_bsc.data  lp_awgn.data  lp_bec.data  lp_bsc.data  lt_0p01.data  lt_0p03.data  lt_0p1.data  ml_awgn.data  ml_bec.data  ml_bsc.data  raptor.data  raptor_just_lt.data
(+40 files in other folders)
